--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   padding-bottom: 30px;
 }
 .padtop {
-  padding-top: 120px;
+  padding-top: 50px;
 }
 .bg-gold {
   background-color: #a39161;
@@ -23,12 +23,15 @@
 .bottom-pic {
   justify-content: flex-end;
   padding: 20px;
+  height: 300px;
+  width: 500px;
 }
 .bottom-text {
   justify-content: center;
-  padding: 100px 40px 0 40px;
+  padding: 30px 40px 20px 40px;
 }
 .logo-image {
-  padding-top: 20px;
   justify-content: center;
+  height: 100px;
+  width: 100px;
 }
