--- a/style.css
+++ b/style.css
@@ -1,27 +1,28 @@
 .bg-img {
   background-image: url("http://stickskillzunlimited.com/wp-content/uploads/2017/05/lacrosse-goal-background-1024x393.jpg");
-  height: 462px;
-  width: 450px;
+  height: 100%;
+  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.video {
-  width: 380px;
-  height: 300px;
 }
 .bg {
   background-color: #592048;
 }
 .video-pad {
   padding-bottom: 40px;
+  
+  max-height: 55vh;
+  max-width: 414px;
+
 }
 .padtop {
   padding-top: 50px;
 }
 .bg-gold {
   background-color: #a39161;
+  min-width: 500px;
 }
-.card-pad p {
+.card-pad {
   padding: 0px;
   align-content: center;
   margin-bottom: 10px;
@@ -29,13 +30,18 @@
 .btn-push {
   position: absoulute;
   bottom: -2em;
-
   padding: 0.25em;
 }
 .button {
-  width: 150px;
-  height: 40px;
+  border: 2px solid black;
+  padding-bottom: 15px;
+  border-color: #a39161;
+  
 }
+.button:hover {
+  color: var(#39152f);
+}
+
 .round-pic {
   border-radius: 50%;
   padding: 20px;
@@ -46,14 +52,13 @@
 .bottom-pic {
   justify-content: flex-end;
   padding: 20px;
-  width: 600px;
+  width: 75%;
 }
 .bottom-text {
   justify-content: center;
   align-items: center;
   padding: 30px 40px 20px 40px;
 }
-
 .logo-image {
   height: 100px;
   width: 100px;
