--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ row {
 }
 .card-pad {
   position: inherit;
-  margin-bottom: -3rem;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-bottom: -2rem;
+  padding-top: -10rem;
+  padding-bottom: 20px;
   height: 100%;
   width: 100%;
 }
@@ -39,25 +39,24 @@ row {
   position: absolute;
   border-color: black;
   background-color: #a39161;
-  margin-bottom: 20px;
 }
 .round-pic {
   border-radius: 50%;
-  padding: 20px;
+  padding: 15px;
+  margin-top: 3rem;
 }
 .row-break {
-  padding-bottom: 10px;
 }
 .bottom-pic {
-  justify-content: flex-end;
-  padding: 20px;
+  justify-content: space-around;
+  padding: 20px 5px;
   width: 75%;
-  padding-top: 5rem;
+  margin-top: 2rem;
 }
 .bottom-text {
-  justify-content: center;
-  align-items: center;
-  padding: 4rem 40px 20px 40px;
+  justify-content: space-around;
+  padding-top: 20px;
+  margin-top: 2rem;
 }
 .logo-image {
   height: 100px;
