Final Rough Draft/  few more tweaks left

--- a/style.css
+++ b/style.css
@@ -89,19 +89,17 @@
   );
 }
 .grad2 {
-  background-image: linear-gradient(
-    to bottom,
-    black,
-    #3a132e,
-    #5e1849,
-    #592048,
-    #703960,
-    #a37194,
-    #d4b3cb,
-    #ebd3e4,
-    white
-  );
+  background-color: #28343a;
+  width: 4rem;
+  height: 4rem;
+  flex-direction: column;
 }
-.linked-1 {
-  justify-content: flex-end;
+.linked-2 {
+  margin-left: 34rem;
+}
+.match {
+  background-color: #28343a;
+}
+.stack {
+  flex-direction: column;
 }
