--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 .bg-img {
   background-image: url("http://stickskillzunlimited.com/wp-content/uploads/2017/05/lacrosse-goal-background-1024x393.jpg");
-  height: 100%;
-  width: 100%;
+  height: auto;
+  width: auto;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .bg {
   background-color: #592048;
 }
 .video-pad {
   padding-bottom: 20px;
-  order: 0;
+  height: 100%;
+  width: 100%;
+  /* order: 0; */
 }
 .padtop {
   padding-top: 50px;
@@ -35,8 +36,8 @@
 }
 .sm-button {
   position: absolute;
-  border-color: #592044;
-  background-color: black;
+  border-color: black;
+  background-color: #592048;
   left: 37%;
   border-radius: 10%;
 }
@@ -65,11 +66,6 @@
 .logo-image {
   height: 100px;
   width: 100px;
-}
-@media only screen and (max-width: 768px) {
-  div {
-    order: 1;
-  }
 }
 .shadow {
   text-shadow: 1px 2px black;
@@ -101,5 +97,5 @@
   background-color: #28343a;
 }
 .stack {
-  flex-direction: column;
+  text-align: center;
 }
